# heart-failure-prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  environment.yml  pyproject.toml
.dvc/: config
data/: raw.dvc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: README.md
notebooks/exploration/: 0.01-exploring.ipynb
scripts/exploration/: 0.01-exploring.py
src/heart_failure_prediction/: __init__.py  config.py  dataset.py
