[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "heart_failure_prediction"
version = "0.0.1"
description = "Predict whether a patient is prone to heart failure depending on several attributes."
authors = [{ name = "PureStupid" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
requires-python = "~=3.12"

[tool.ruff.lint]
exclude = ["**/scripts/**"]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pydocstyle
  "D",
  # NumPy-specific
  "NPY",
  # pandas-vet
  "PD",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/build"]
ignore = ["**/scripts/**"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "--cov=heart_failure_prediction"

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py:percent"
